# EDPO_FS26_Project

./: Makefile  README.md  docker-compose.infra.yml  docker-compose.yml
bpmn files/: CreatePost.bpmn  RegisterUser.bpmn  ReportContent.bpmn  ReportPost.bpmn  VerifyContent.bpmn  check-report-valid.form  review-objection.form  verify-user.form
db/init/: 00-create-dbs-users.sql  10-post-schema.sql  20-interaction-schema.sql  30-notification-schema.sql
docs/adr/: 0001-record-coordination-pattern.md  0002-record-workflow-engine-selection.md  0003-record-stateful-resilience-error-handling.md  0004-record-distributed-data-consistency.md  0005-record-message-broker-selection.md  0006-record-process-model-boundaries.md  0007-record-asynchronous-message-correlation.md  0008-record-auditing-and-read-models.md  ADR+Prompting+Template.md
docs/exercises-submissions/: submission-assignment-1.md  submission-assignmnent-1.md  submission-bpmn-files.md  submission-diagrams.md  submission-exercise-1.md  submission-exercise-3.md  submission-exercise-4.md  (+2 more)
exercises-submissions/: submission-exercise-2.md
misc/: starting_postman_collection.json
scripts/: config.py  demo.sh  experiment_monitor.py  experiment_runner.py  generate_load.py  plot_big.py  plots.py  producer_worker.py  topic_manager.py
services/interaction-service/: Dockerfile  pyproject.toml
services/interaction-service/app/: __init__.py  config.py  db.py  kafka_pub.py  main.py  models.py  routes.py
shared/: pyproject.toml
shared/shared/: __init__.py  events.py  kafka.py  logging.py  settings.py
(+23 files in other folders)
